# xontrib-commands

./: README.md  pyproject.toml
xontrib/: commands.py
xontrib/commands/: __init__.py  dev_cmd.py  dotenv_cmd.py  reload.py  report_keys.py  utils.py
xontrib_commands/: argerize.py  dev_cmd.py  dotenv_cmd.py  main.py  reload.py  utils.py
xontrib_commands/cmds/: dev_cmd.py  dotenv_cmd.py  parallex.py  reload.py  report_keys.py
