[tool.poetry]
name = "xontrib-commands"
version = "0.4.0"
description = "Useful xonsh-shell commands/alias functions"
authors = ["Noortheen Raja NJ <jnoortheen@gmail.com>"]

license = "MIT"
readme = "README.md"

repository = "https://github.com/jnoortheen/xontrib-commands"
keywords = ['xontrib', 'xonsh']
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: System :: Shells",
    "Topic :: System :: System Shells",
    "Topic :: Terminals",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]


packages = [
    { include = "xontrib_commands" },
]

[tool.poetry.urls]
Documentation = "https://github.com/jnoortheen/xontrib-commands/blob/master/README.md"
Code = "https://github.com/jnoortheen/xontrib-commands"
"Issue tracker" = "https://github.com/jnoortheen/xontrib-commands/issues"


[tool.poetry.dependencies]
python = ">=3.8"
xonsh = { version = ">=0.12.5" }
arger = { version = ">=1.2.7", python = ">=3.6, <4.0" }
rich = { version = "*", python = ">=3.6, <4.0" }
python-dotenv = ">=0.19.1"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"

[tool.poetry.plugins."xonsh.xontribs"]
"commands" = "xontrib_commands.main"
